# barracuda_vision

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  requirements.txt
ros2_ws/src/barracuda_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/barracuda_vision/barracuda_vision/: test_pub_image.py  yolo_image_listener.py
ros2_ws/src/barracuda_vision/launch/: barracuda_vision.launch.py
